--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port = 8090
 
 #DB CONNECTION
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/maksim_demo
+spring.datasource.url=jdbc:postgresql://maharatest.net:5432/maksim_demo
 spring.datasource.username=postgres
-spring.datasource.password=15062007
+spring.datasource.password=mahara
 
 spring.jpa.hibernate.ddl-auto=validate
